force-app/force-app/main/default/objects/SCH_Schedule__c/fields/Base_Object__c.field-meta.xml
<CustomField>
    <fullName>Base_Object__c</fullName>
    <label>Base Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>