force-app/force-app/main/default/objects/SCH_Schedule__c/fields/Base_Object_Evaluate_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Base_Object_Evaluate_Criteria__c</fullName>
    <label>Base Object Evaluate Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>