force-app/force-app/main/default/objects/SCH_Schedule__c/fields/Execute_Now__c.field-meta.xml
<CustomField>
    <fullName>Execute_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execute Now</label>
    <type>Checkbox</type>
</CustomField>