force-app/force-app/main/default/objects/SCH_Schedule__c/fields/Related_Object_Evaluate_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Evaluate_Criteria__c</fullName>
    <label>Related Object Evaluate Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>