force-app/force-app/main/default/objects/SCH_Schedule__c/fields/Related_Object_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Relationship_Name__c</fullName>
    <label>Related Object Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>