force-app/force-app/main/default/objects/SCH_Schedule__c/fields/Schedule_Date_Time_Field__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date_Time_Field__c</fullName>
    <label>Schedule Date/Time Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>