force-app/force-app/main/default/objects/SCH_Schedule__c/fields/SObject_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>SObject_Record_Id__c</fullName>
    <label>SObject Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>