force-app/force-app/main/default/objects/SCH_Schedule__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>draft</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>processing</fullName>
                <label>Processing</label>
            </value>
            <value>
                <fullName>scheduled</fullName>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>completed</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>canceled</fullName>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>failed</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>inactive</fullName>
                <label>Unschedule</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>